<resources>
    <string name="app_name">HabitTracker</string>
    <string name="name">Name:</string>
    <string name="hint_name">Enter The Name of The Person</string>
    <string name="gender">Gender:</string>
    <string name="age">Age:</string>
    <string name="hint_age">Enter Age of The Person</string>
    <string name="unit_age">yrs</string>
    <string name="male">Male</string>
    <string name="title">Habit</string>
    <string name="female">Female</string>
    <string name="button">Habit</string>
    <string name="save">save</string>
</resources>
